globus-ftp-client (8.22-1+gt6.@distro@) @distro@; urgency=low

  * Fix tests on jessie with pbuilder

 -- Globus Toolkit <support@globus.org>  Wed, 15 Apr 2015 12:58:25 -0400

globus-ftp-client (8.21-2+gt6.@distro@) @distro@; urgency=low

  * gridftp-ssh script required in base package

 -- Globus Toolkit <support@globus.org>  Mon, 30 Mar 2015 14:55:30 -0500

globus-ftp-client (8.21-1+gt6.@distro@) @distro@; urgency=low

  * GT-587: ssh path not  being set in globus-ftp-client for sshftp in GT6

 -- Globus Toolkit <support@globus.org>  Thu, 12 Mar 2015 16:16:30 -0500

globus-ftp-client (8.20-1+gt6.@distro@) @distro@; urgency=low

  * improve fix for GT-568

 -- Globus Toolkit <support@globus.org>  Wed, 04 Mar 2015 15:00:46 -0600

globus-ftp-client (8.19-1+gt6.@distro@) @distro@; urgency=low

  * GT-568: Fix incompatibility between IPV4-only source and IPV6 dest when IPV6 is enabled

 -- Globus Toolkit <support@globus.org>  Thu, 12 Feb 2015 11:39:43 -0600

globus-ftp-client (8.18-1+gt6.@distro@) @distro@; urgency=low

  * GT-534: Fix for crash after error with delayed pasv response

 -- Globus Toolkit <support@globus.org>  Mon, 09 Feb 2015 15:49:46 -0600

globus-ftp-client (8.17-1+gt6.@distro@) @distro@; urgency=low

  * Disable segfaulting test on GNU/Hurd

 -- Globus Toolkit <support@globus.org>  Tue, 18 Nov 2014 14:45:15 -0500

globus-ftp-client (8.16-1+gt6.@distro@) @distro@; urgency=low

  * don't use $HOME in tests

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 14:27:54 -0500

globus-ftp-client (8.15-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:13:45 -0500

globus-ftp-client (8.14-2+gt6.@distro@) @distro@; urgency=low

  * Add openssl build dep for tests

 -- Globus Toolkit <support@globus.org>  Tue, 28 Oct 2014 20:53:00 -0500

globus-ftp-client (8.14-1+gt6.@distro@) @distro@; urgency=low

  * GT-572: globus-ftp-client performs MLSD with incorrect TYPE
