@@ -1,3 +1,9 @@
+globus-ftp-client (8.23-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix crash in error handling
+
+ -- Globus Toolkit <support@globus.org>  Wed, 15 Jul 2015 12:26:16 -0400
+
 globus-ftp-client (8.22-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix tests on jessie with pbuilder
